@@ -15,7 +15,6 @@ import org.springframework.test.web.servlet.ResultActions;
 import shop.yesaladin.shop.publish.dto.PublisherResponseDto;
 import shop.yesaladin.shop.publish.service.inter.QueryPublisherService;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.equalTo;
@@ -36,13 +35,13 @@ class QueryPublisherControllerTest {
     private MockMvc mockMvc;
 
     @MockBean
-    private QueryPublisherService queryPublisherService;
+    private QueryPublisherService service;
 
     private List<PublisherResponseDto> publishers;
 
     @BeforeEach
     void setUp() {
-        publishers = Arrays.asList(
+        publishers = List.of(
                 new PublisherResponseDto(1L, "출판사1"),
                 new PublisherResponseDto(2L, "출판사2")
         );
@@ -52,7 +51,7 @@ class QueryPublisherControllerTest {
     @DisplayName("출판사 전체 조회 성공")
     void getPublishers() throws Exception {
         // given
-        Mockito.when(queryPublisherService.findAll()).thenReturn(publishers);
+        Mockito.when(service.findAll()).thenReturn(publishers);
 
         // when
         ResultActions result = mockMvc.perform(get("/v1/publishers")
