@@ -11,7 +11,6 @@ import shop.yesaladin.shop.tag.dto.TagsResponseDto;
 import shop.yesaladin.shop.tag.exception.TagNotFoundException;
 import shop.yesaladin.shop.tag.service.inter.QueryTagService;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -100,7 +99,7 @@ class QueryTagServiceImplTest {
         String name1 = "행복한";
         String name2 = "슬픈";
 
-        List<Tag> tags = Arrays.asList(
+        List<Tag> tags = List.of(
                 Tag.builder().name(name1).build(),
                 Tag.builder().name(name2).build()
         );
